--- a/src/client_ui.ui
+++ b/src/client_ui.ui
@@ -25,6 +25,9 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Connect</string>
    </property>
@@ -144,14 +147,17 @@
      <height>21</height>
     </rect>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
   </widget>
   <widget class="QTextBrowser" name="systemMsgBrowser">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>120</y>
-     <width>441</width>
-     <height>171</height>
+     <y>140</y>
+     <width>451</width>
+     <height>181</height>
     </rect>
    </property>
   </widget>
@@ -163,6 +169,9 @@
      <width>91</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Login</string>
@@ -227,6 +236,9 @@
     </item>
     <item>
      <widget class="QPushButton" name="mkdirBtn">
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="text">
        <string>MKD</string>
       </property>
@@ -249,6 +261,9 @@
      <pointsize>13</pointsize>
     </font>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string>&gt;&gt;</string>
    </property>
@@ -267,6 +282,9 @@
      <family>Cascadia Mono SemiBold</family>
      <pointsize>13</pointsize>
     </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>&lt;&lt;</string>
